800-600 media query done

--- a/poster/styles/styles.css
+++ b/poster/styles/styles.css
@@ -325,9 +325,10 @@ img {
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1/4;
-    font-size: 4vw;
+    font-size: 3.5vw;
     margin-top: 5%;
-    text-align: center;
+    text-align: left;
+    padding: 2%;
   }
   .image {
     -ms-grid-column: 2;
@@ -352,13 +353,14 @@ img {
   }
   h3 span {
     font-size: 100%;
-    display: inline-block;
+    display: block;
   }
   .text-4 {
     -ms-grid-row: 5;
     -ms-grid-row-span: 1;
     grid-row: 5/6;
     font-size: 2.5vw;
+    padding: 5%;
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
   }
@@ -493,11 +495,9 @@ img {
 }
 
 @media (max-width: 599px) and (min-width: 0px) {
-  h3 {
-    font-size: 10%;
-  }
-  p {
-    font-size: 5%;
+  .wrapper {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
   }
 }
 /*# sourceMappingURL=styles.css.map */
