--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -109,10 +109,7 @@ background-color: #bc6c32;
     -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
     padding: 10%;
-    font-size: 2.5vw;
-
-
-}
+    font-size: 2.5vw;}
 
 .text-5 {
     -ms-grid-column: 1;
@@ -334,9 +331,12 @@ img {
   
 
 
-    font-size: 4vw;
+    font-size: 3.5vw;
     margin-top: 5%;
-    text-align: center; 
+    text-align: left;
+    padding:2%;
+
+
 }
 
     .image {
@@ -363,7 +363,7 @@ img {
     }
 
     h3 span {font-size:100%;
-        display: inline-block;}
+        display: block;}
 
     .text-4 {
 
@@ -372,6 +372,7 @@ img {
 
         
         font-size: 2.5vw;
+         padding: 5%;
        transform: rotate(0deg);
        
         
@@ -535,13 +536,7 @@ padding: 5%;
 }
 
 @media (max-width: 599px) and (min-width: 0px) {
-    h3 {
-        font-size: 10%;
-    }
-
-    p {
-        font-size: 5%;
-    }
+   .wrapper {grid-template-columns: 1fr;}
 }
 
 /*# sourceMappingURL=styles.css.map */
