--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -536,8 +536,244 @@ padding: 5%;
 }
 
 @media (max-width: 399px) and (min-width: 0px) {
-   .wrapper {grid-template-columns: 6fr;}
-.top {grid-column: span;}
+   .wrapper {display: grid;
+    grid-template-columns: 1fr;
+grid-template-rows: .05fr .05fr .05fr .05fr;}
+
+.top {grid-column: 1/2;
+grid-row:1/2;
+display:grid;
+grid-template-columns: .3fr .3fr .3fr; }
+
+
+    .text-1 {
+        text-align: center;
+        font-size: 3vw;
+    grid-column: 1/2;
+        
+       
+    }
+
+    .text-2 {
+        
+        font-size: 3vw;
+        grid-column: 2/3;
+        text-align: center;
+    }
+
+    .text-3 {
+        
+        font-size: 3vw;
+        grid-column: 3/4;
+        text-align: center;
+        
+    }
+
+    .top-subtext {
+        grid-column: 1/4;
+        text-align: center;
+
+  
+
+
+    font-size: 6vw;
+    
+    
+    
+    
+
+
+}
+
+p {text-transform: initial;}
+
+
+.image {grid-column: 1/2;
+    grid-row:2/3;
+}
+
+ 
+
+    .hero {
+    
+    display: grid;
+   
+    grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    -ms-grid-columns: .25fr .25fr;
+    grid-template-columns: .25fr .25fr;
+     
+    grid-template-rows: .05fr .05fr .05fr .05fr;
+    text-transform: uppercase;
+    padding-left:0%;
+    padding-top: 6%;
+
+    
+
+
+}
+
+.text-9 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    padding-right: 5%;
+    font-size: 18vw;
+}
+
+.text-10 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    font-size: 18vw;
+}
+
+.text-11 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    padding-right: 5%;
+    font-size: 18vw;
+    
+}
+
+.text-12 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    font-size: 18vw;
+    
+}
+
+.text-13 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    padding-right: 5%;
+    font-size: 18vw;
+    
+}
+
+.text-14 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    font-size: 18vw;
+    
+}
+
+.text-15 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
+    padding-right: 5%;
+    font-size: 18vw;
+     
+}
+
+.text-16 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2/3;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
+    font-size: 18vw;
+    
+}
+
+.side {
+       
+        grid-column: 1/2;
+        grid-row: 4/5;
+        grid-template-rows: .05fr .05fr .05fr .05fr .05fr;
+        
+        margin-right: 20%;
+
+    }
+
+    h3 span {font-size:200%;
+        display: block;}
+
+    .text-4 {
+
+       
+        grid-row: 5/6;
+
+        
+        font-size: 2.5vw;
+         padding: 5%;
+       transform: rotate(0deg);
+       
+        
+
+
+    }
+
+    .text-5 {
+
+        
+        grid-row: 4/5;
+        padding: 5%;
+       
+        font-size: 2.5vw;
+        transform: rotate(0deg);
+    }
+
+    .text-6 {
+
+        
+        grid-row: 3/4;
+padding: 5%;
+        
+        font-size: 2.5vw;
+        transform: rotate(0deg);
+    }
+
+    .text-7 {
+
+       
+        grid-row: 2/3;
+
+        padding: 5%;
+        font-size: 2.5vw;
+        transform: rotate(0deg);
+    }
+
+    .text-8 {
+
+      
+        grid-row: 1/2;
+
+        padding: 5%;
+        font-size: 2.5vw;
+        transform: rotate(0deg);
+    }
+h2 {font-size: 200%;}
+
 
    
 }
