--- a/poster/styles/styles.css
+++ b/poster/styles/styles.css
@@ -93,6 +93,8 @@
   margin-left: 5%;
   margin-right: 10%;
   line-height: 70%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .text-4 {
@@ -105,7 +107,9 @@
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
   padding: 10%;
-  font-size: 2.5vw;
+  font-size: 1vw;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .text-5 {
@@ -145,6 +149,8 @@
   transform: rotate(-90deg);
   padding: 10%;
   font-size: 2.5vw;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .text-8 {
@@ -273,7 +279,7 @@
 }
 
 h3 {
-  font-size: 75%;
+  font-size: .05vw;
 }
 
 p {
@@ -542,9 +548,6 @@ img {
     grid-column: 1/4;
     text-align: center;
     font-size: 6vw;
-  }
-  p {
-    text-transform: initial;
   }
   .image {
     -ms-grid-column: 1;
