--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -96,6 +96,7 @@ background-color: #bc6c32;
     margin-right: 10%;
 
     line-height: 70%;
+    object-fit: contain;
 
 }
 
@@ -109,7 +110,8 @@ background-color: #bc6c32;
     -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
     padding: 10%;
-    font-size: 2.5vw;}
+    font-size: 1vw;
+object-fit: contain;}
 
 .text-5 {
     -ms-grid-column: 1;
@@ -148,6 +150,7 @@ background-color: #bc6c32;
     transform: rotate(-90deg);
     padding: 10%;
     font-size: 2.5vw;
+    object-fit: contain;
 }
 
 .text-8 {
@@ -278,8 +281,11 @@ background-color: #bc6c32;
     font-size: 18vw;
 }
 
+
+
 h3 {
-    font-size: 75%;
+    
+    font-size: .05vw;
 }
 
 p {
@@ -585,7 +591,7 @@ grid-template-columns: .3fr .3fr .3fr; }
 
 }
 
-p {text-transform: initial;}
+
 
 
 .image {grid-column: 1/2;
