--- a/poster/styles/styles.css
+++ b/poster/styles/styles.css
@@ -5,6 +5,25 @@
   font-size: 32px;
 }
 
+h2 {
+  font-size: 100%;
+  font-size: 2.5vw;
+}
+
+h3 span {
+  font-size: 1vw;
+}
+
+p {
+  font-size: 50%;
+}
+
+img {
+  -o-object-fit: fill;
+     object-fit: fill;
+  max-width: 100%;
+}
+
 .wrapper {
   display: -ms-grid;
   display: grid;
@@ -107,7 +126,6 @@
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
   padding: 10%;
-  font-size: 1vw;
   -o-object-fit: contain;
      object-fit: contain;
 }
@@ -122,7 +140,6 @@
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
   padding: 10%;
-  font-size: 2.5vw;
 }
 
 .text-6 {
@@ -135,7 +152,6 @@
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
   padding: 10%;
-  font-size: 2.5vw;
 }
 
 .text-7 {
@@ -148,7 +164,6 @@
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
   padding: 10%;
-  font-size: 2.5vw;
   -o-object-fit: contain;
      object-fit: contain;
 }
@@ -163,7 +178,6 @@
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
   padding: 10%;
-  font-size: 2.5vw;
 }
 
 .image {
@@ -276,20 +290,6 @@
   -ms-grid-row-span: 1;
   grid-row: 4/5;
   font-size: 18vw;
-}
-
-h3 {
-  font-size: .05vw;
-}
-
-p {
-  font-size: 50%;
-}
-
-img {
-  -o-object-fit: fill;
-     object-fit: fill;
-  max-width: 100%;
 }
 
 @media (max-width: 800px) and (min-width: 400px) {
