--- a/poster/styles/styles.css
+++ b/poster/styles/styles.css
@@ -5,13 +5,51 @@
   font-size: 32px;
 }
 
+h1 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: .5fr .5fr;
+      grid-template-columns: .5fr .5fr;
+  text-transform: uppercase;
+}
+
+h1 :nth-child(2n) {
+  margin-left: 0;
+}
+
+h1 span {
+  font-size: 18vw;
+  margin-top: 0;
+}
+
+.hero {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
+}
+
 h2 {
-  font-size: 100%;
   font-size: 2.5vw;
 }
 
+.side {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2/4;
+  -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  margin-right: 20%;
+}
+
 h3 span {
-  font-size: 1vw;
+  font-size: 40%;
+}
+
+h3 {
+  margin-right: 10%;
 }
 
 p {
@@ -19,16 +57,29 @@ p {
 }
 
 img {
-  -o-object-fit: fill;
-     object-fit: fill;
-  max-width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  max-width: 95%;
+}
+
+.image {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -ms-flex-line-pack: right;
+      align-content: right;
 }
 
 .wrapper {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: .5fr 1.5fr 9fr;
-  grid-template-rows: .5fr 1.5fr 9fr;
+  -ms-grid-rows: .5fr 1.5fr 4fr;
+      grid-template-rows: .5fr 1.5fr 4fr;
   -ms-grid-columns: 1fr 2fr 2fr;
   grid-template-columns: 1fr 2fr 2fr;
   background-color: #bc6c32;
@@ -57,7 +108,6 @@ img {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
-  font-size: 3vw;
 }
 
 .text-2 {
@@ -69,7 +119,6 @@ img {
   grid-row: 1/2;
   text-align: left;
   margin-right: 5%;
-  font-size: 3vw;
 }
 
 .text-3 {
@@ -80,8 +129,6 @@ img {
   -ms-grid-row-span: 1;
   grid-row: 1/2;
   text-align: right;
-  font-size: 3vw;
-  background-color: transparent;
 }
 
 .top-subtext {
@@ -92,206 +139,9 @@ img {
   -ms-grid-row-span: 1;
   grid-row: 2/3;
   text-align: left;
-  font-size: 2vw;
 }
 
-.side {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 2;
-  grid-row: 2/4;
-  -ms-grid-columns: 1fr;
-  grid-template-columns: 1fr;
-  -ms-grid-rows: .12fr .12fr .12fr .12fr .12fr;
-      grid-template-rows: .12fr .12fr .12fr .12fr .12fr;
-  background-color: transparent;
-  margin-left: 5%;
-  margin-right: 10%;
-  line-height: 70%;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-.text-4 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 5;
-  -ms-grid-row-span: 1;
-  grid-row: 5/6;
-  -webkit-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-  padding: 10%;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-.text-5 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 4;
-  -ms-grid-row-span: 1;
-  grid-row: 4/5;
-  -webkit-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-  padding: 10%;
-}
-
-.text-6 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
-  grid-row: 3/4;
-  -webkit-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-  padding: 10%;
-}
-
-.text-7 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2/3;
-  -webkit-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-  padding: 10%;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-.text-8 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-  -webkit-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-  padding: 10%;
-}
-
-.image {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-column: 3/4;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2/3;
-  -o-object-fit: fill;
-     object-fit: fill;
-}
-
-.hero {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2/4;
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
-  grid-row: 3/4;
-  -ms-grid-columns: .25fr .25fr;
-  grid-template-columns: .25fr .25fr;
-  -ms-grid-rows: .1fr .1fr .1fr .1fr;
-  grid-template-rows: .1fr .1fr .1fr .1fr;
-  text-transform: uppercase;
-  padding-left: 10%;
-}
-
-.text-9 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-  padding-right: 5%;
-  font-size: 18vw;
-}
-
-.text-10 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
-  font-size: 18vw;
-}
-
-.text-11 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2/3;
-  padding-right: 5%;
-  font-size: 18vw;
-}
-
-.text-12 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2/3;
-  font-size: 18vw;
-}
-
-.text-13 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
-  grid-row: 3/4;
-  padding-right: 5%;
-  font-size: 18vw;
-}
-
-.text-14 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  -ms-grid-row: 3;
-  -ms-grid-row-span: 1;
-  grid-row: 3/4;
-  font-size: 18vw;
-}
-
-.text-15 {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1/2;
-  -ms-grid-row: 4;
-  -ms-grid-row-span: 1;
-  grid-row: 4/5;
-  padding-right: 5%;
-  font-size: 18vw;
-}
-
-.text-16 {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  -ms-grid-row: 4;
-  -ms-grid-row-span: 1;
-  grid-row: 4/5;
-  font-size: 18vw;
-}
-
+/* media query*/
 @media (max-width: 800px) and (min-width: 400px) {
   .wrapper {
     -ms-grid-columns: 1fr 1fr;
@@ -360,15 +210,15 @@ img {
   h3 span {
     font-size: 100%;
     display: block;
+    font-size: 2.5vw;
+    padding: 5%;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   .text-4 {
     -ms-grid-row: 5;
     -ms-grid-row-span: 1;
     grid-row: 5/6;
-    font-size: 2.5vw;
-    padding: 5%;
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
   }
   .text-5 {
     -ms-grid-row: 4;
