--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -6,13 +6,44 @@ background-color: #bc6c32;
 }
 
 
+h1 {
+    display: grid;
+    grid-template-columns: .5fr .5fr;
+   text-transform: uppercase;
+   
+  
+
+}
+
+h1 :nth-child(2n) {
+  margin-left: 0;
+}
 
 
-    h2 {font-size: 100%;
+
+h1 span {font-size:18vw;
+margin-top:0;}
+
+.hero {grid-column: 2/4;
+}
+
+ h2 {
 font-size: 2.5vw;}
 
-h3 span {
-    font-size: 1vw;}
+
+.side {
+grid-column: 1/2;
+grid-row:2/4;
+grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+margin-right: 20%;}
+
+
+
+h3 span {font-size: 40%;}
+
+h3 {margin-right:10%;}
+
+
 
 
 
@@ -21,21 +52,35 @@ p {
 }
 
 img {
-    object-fit: fill;
-    max-width: 100%;
-    ;
+    object-fit: contain;
+    max-width: 95%;
+    
+   
+}
+
+.image {
+   
+    grid-column: 3/4;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    object-fit: contain;
+    align-content: right;
+    
+
 }
    
 
 .wrapper {
     display: -ms-grid;
     display: grid;
-    -ms-grid-rows: .5fr 1.5fr 9fr;
-    grid-template-rows: .5fr 1.5fr 9fr;
+    
+    grid-template-rows: .5fr 1.5fr 4fr;
     -ms-grid-columns: 1fr 2fr 2fr;
     grid-template-columns: 1fr 2fr 2fr;
     background-color: #bc6c32;
     margin: 5%;
+
 }
 
 .top {
@@ -61,7 +106,7 @@ img {
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
     grid-row: 1/2;
-    font-size: 3vw;
+    
 }
 
 .text-2 {
@@ -71,7 +116,7 @@ img {
     grid-row: 1/2;
     text-align: left;
     margin-right: 5%;
-    font-size: 3vw;
+    
 
 }
 
@@ -83,8 +128,7 @@ img {
     -ms-grid-row-span: 1;
     grid-row: 1/2;
     text-align: right;
-    font-size: 3vw;
-    background-color: transparent;
+    
 }
 
 .top-subtext {
@@ -97,214 +141,24 @@ img {
     text-align: left;
 
 
-    font-size: 2vw;
-}
-
-.side {
-
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-
-    grid-row: 2/4;
-    -ms-grid-columns: 1fr;
-    grid-template-columns: 1fr;
-
-    grid-template-rows: .12fr .12fr .12fr .12fr .12fr;
-    background-color: transparent;
-    margin-left: 5%;
-    margin-right: 10%;
-
-    line-height: 70%;
-    object-fit: contain;
-   
-
-}
-
-.text-4 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 5;
-    -ms-grid-row-span: 1;
-    grid-row: 5/6;
-    -webkit-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-    padding: 10%;
-    
-object-fit: contain;}
-
-.text-5 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-row: 4/5;
-    -webkit-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-    padding: 10%;
     
 }
 
-.text-6 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-    -webkit-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-    padding: 10%;
-    
-}
-
-.text-7 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-    -webkit-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-    padding: 10%;
-    
-    object-fit: contain;
-}
-
-.text-8 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    -webkit-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-    padding: 10%;
-    
-
-}
-
-.image {
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 1;
-    grid-column: 3/4;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-    object-fit: fill;
-
-}
-
-.hero {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
-    grid-column: 2/4;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-    -ms-grid-columns: .25fr .25fr;
-    grid-template-columns: .25fr .25fr;
-    -ms-grid-rows: .1fr .1fr .1fr .1fr;
-    grid-template-rows: .1fr .1fr .1fr .1fr;
-    text-transform: uppercase;
-    padding-left: 10%;
 
 
-}
-
-.text-9 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    padding-right: 5%;
-    font-size: 18vw;
-}
-
-.text-10 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    font-size: 18vw;
-}
-
-.text-11 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-    padding-right: 5%;
-    font-size: 18vw;
-}
-
-.text-12 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-    font-size: 18vw;
-}
-
-.text-13 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-    padding-right: 5%;
-    font-size: 18vw;
-}
-
-.text-14 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-    font-size: 18vw;
-}
-
-.text-15 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-row: 4/5;
-    padding-right: 5%;
-    font-size: 18vw;
-}
-
-.text-16 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-row: 4/5;
-    font-size: 18vw;
-}
 
 
+
+
+
+
+
+
+
+
+
+
+/* media query*/
 
 
 @media (max-width:800px) and (min-width:400px) {
@@ -377,7 +231,9 @@ object-fit: contain;}
     }
 
     h3 span {font-size:100%;
-        display: block;}
+        display: block;font-size: 2.5vw;
+         padding: 5%;
+       transform: rotate(0deg);}
 
     .text-4 {
 
@@ -385,9 +241,7 @@ object-fit: contain;}
         grid-row: 5/6;
 
         
-        font-size: 2.5vw;
-         padding: 5%;
-       transform: rotate(0deg);
+        
        
         
 
