--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -10,23 +10,29 @@ h1 {
     display: grid;
     grid-template-columns: .5fr .5fr;
    text-transform: uppercase;
+   padding:0;
+   
    
   
 
 }
 
 h1 :nth-child(2n) {
-  margin-left: 0;
+  
+  text-align: left;
 }
 
 
 
 h1 span {font-size:18vw;
-margin-top:0;}
+margin-top:0;
+line-height: 100%;}
 
 .hero {grid-column: 2/4;
 }
 
+.top{grid-row:1/2;
+grid-column: 1/4;}
  h2 {
 font-size: 2.5vw;}
 
@@ -49,12 +55,14 @@ h3 {margin-right:10%;}
 
 p {
     font-size: 50%;
+    margin:0;
 }
 
 img {
-    object-fit: contain;
-    max-width: 95%;
     
+    max-width:100%;
+    overflow: hidden;
+    margin-left:2%;
    
 }
 
@@ -64,8 +72,9 @@ img {
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
     grid-row: 2/3;
-    object-fit: contain;
+    
     align-content: right;
+    
     
 
 }
@@ -92,57 +101,14 @@ img {
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
     grid-row: 1/2;
-    -ms-grid-rows: .25fr .25fr .25fr;
-    grid-template-rows: .25fr .25fr .25fr;
-    -ms-grid-columns: 1fr 1fr 1fr;
-    grid-template-columns: 2fr .8fr .5fr;
-
+   
 }
 
-.text-1 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    
-}
-
-.text-2 {
-
-    grid-column: 2/3;
-
-    grid-row: 1/2;
-    text-align: left;
-    margin-right: 5%;
-    
-
-}
-
-.text-3 {
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 1;
-    grid-column: 3/4;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    text-align: right;
-    
-}
-
-.top-subtext {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
-    grid-column: 2/4;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-    text-align: left;
 
 
-    
-}
+
+
+
 
 
 
