media queries semantically correct

--- a/poster/styles/styles.css
+++ b/poster/styles/styles.css
@@ -37,10 +37,20 @@ h1 span {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1/4;
+  -ms-grid-columns: 1fr .32fr .32fr;
+      grid-template-columns: 1fr .32fr .32fr;
 }
 
 h2 {
   font-size: 2.5vw;
+}
+
+p {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
+  font-size: 50%;
+  text-align: left;
 }
 
 .side {
@@ -53,6 +63,7 @@ h2 {
   -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   margin-right: 20%;
+  margin-top: 0;
 }
 
 h3 span {
@@ -61,11 +72,6 @@ h3 span {
 
 h3 {
   margin-right: 10%;
-}
-
-p {
-  font-size: 50%;
-  margin: 0;
 }
 
 img {
@@ -83,6 +89,7 @@ img {
   grid-row: 2/3;
   -ms-flex-line-pack: right;
       align-content: right;
+  margin-top: 7%;
 }
 
 .wrapper {
