--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -32,16 +32,27 @@ line-height: 100%;}
 }
 
 .top{grid-row:1/2;
-grid-column: 1/4;}
+grid-column: 1/4;
+grid-template-columns: 1fr .32fr .32fr;}
+
  h2 {
 font-size: 2.5vw;}
+
+
+
+p {
+    grid-column:2/4;
+    font-size: 50%;
+    text-align: left;
+}
 
 
 .side {
 grid-column: 1/2;
 grid-row:2/4;
 grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-margin-right: 20%;}
+margin-right: 20%;
+margin-top:0;}
 
 
 
@@ -53,10 +64,8 @@ h3 {margin-right:10%;}
 
 
 
-p {
-    font-size: 50%;
-    margin:0;
-}
+
+
 
 img {
     
@@ -74,6 +83,7 @@ img {
     grid-row: 2/3;
     
     align-content: right;
+    margin-top:7%;
     
     
 
