--- a/poster/styles/styles.css
+++ b/poster/styles/styles.css
@@ -1,42 +1,48 @@
 * {
-  font-family: sans-serif;
-  font-weight: 200;
   background-color: #bc6c32;
+  font-family: sans-serif;
   font-size: 32px;
+  font-weight: 200;
 }
 
-h1 {
+.wrapper {
+  background-color: #bc6c32;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: .5fr .5fr;
-      grid-template-columns: .5fr .5fr;
-  text-transform: uppercase;
-  padding: 0;
+  -ms-grid-columns: 1fr 2fr 2fr;
+  grid-template-columns: 1fr 2fr 2fr;
+  -ms-grid-rows: .5fr 1.5fr 4fr;
+      grid-template-rows: .5fr 1.5fr 4fr;
+  margin: 5%;
 }
 
-h1 :nth-child(2n) {
-  text-align: left;
+.image {
+  -ms-flex-line-pack: right;
+      align-content: right;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  margin-top: 7%;
 }
 
-h1 span {
-  font-size: 18vw;
-  margin-top: 0;
-  line-height: 100%;
-}
-
-.hero {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2/4;
+img {
+  margin-left: 2%;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 .top {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
+  display: -ms-grid;
+  display: grid;
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-column: 1/4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
   -ms-grid-columns: 1fr .32fr .32fr;
       grid-template-columns: 1fr .32fr .32fr;
 }
@@ -46,10 +52,10 @@ h2 {
 }
 
 p {
+  font-size: 50%;
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-column: 2/4;
-  font-size: 50%;
   text-align: left;
 }
 
@@ -74,44 +80,29 @@ h3 {
   margin-right: 10%;
 }
 
-img {
-  max-width: 100%;
-  overflow: hidden;
-  margin-left: 2%;
+.hero {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2/4;
 }
 
-.image {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-column: 3/4;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2/3;
-  -ms-flex-line-pack: right;
-      align-content: right;
-  margin-top: 7%;
-}
-
-.wrapper {
+h1 {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: .5fr 1.5fr 4fr;
-      grid-template-rows: .5fr 1.5fr 4fr;
-  -ms-grid-columns: 1fr 2fr 2fr;
-  grid-template-columns: 1fr 2fr 2fr;
-  background-color: #bc6c32;
-  margin: 5%;
+  -ms-grid-columns: .5fr .5fr;
+      grid-template-columns: .5fr .5fr;
+  padding: 0;
+  text-transform: uppercase;
 }
 
-.top {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-column: 1/4;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1/2;
+h1 :nth-child(2n) {
+  text-align: left;
+}
+
+h1 span {
+  font-size: 18vw;
+  line-height: 100%;
+  margin-top: 0;
 }
 
 /* media query*/
@@ -121,31 +112,21 @@ img {
         grid-template-columns: 1fr 1.5fr;
   }
   .top {
+    display: -ms-grid;
+    display: grid;
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-column: 1/3;
-    display: -ms-grid;
-    display: grid;
     -ms-grid-columns: .5fr .5fr .5fr;
         grid-template-columns: .5fr .5fr .5fr;
   }
   h2 {
-    margin-left: 10%;
     font-size: 75%;
+    margin-left: 10%;
   }
   p {
-    margin-left: 5%;
     font-size: 1.75vw;
-  }
-  .image {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-    -o-object-fit: contain;
-       object-fit: contain;
+    margin-left: 5%;
   }
   .side {
     -ms-grid-column: 1;
@@ -156,192 +137,82 @@ img {
     margin-right: 20%;
   }
   h3 span {
-    font-size: 100%;
     display: block;
     font-size: 2.5vw;
-    padding: 5%;
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-    margin-left: 8%;
+    font-size: 100%;
     line-height: 100%;
   }
+  margin-left: 8%;
+  padding: 5%;
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+}
+
+.image {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 @media (max-width: 499px) and (min-width: 0px) {
+  .wrapper {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: .5fr .5fr .5fr .5fr;
+        grid-template-rows: .5fr .5fr .5fr .5fr;
+  }
+  .top {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
   h2 {
     margin-left: 10%;
-    font-size: 10%;
-  }
-  h2 span {
     font-size: 50%;
   }
   p {
-    margin-left: 5%;
-    font-size: 1.75vw;
-  }
-  .image {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-  }
-  .hero {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-    -ms-grid-columns: .25fr .25fr;
-    grid-template-columns: .25fr .25fr;
-    -ms-grid-rows: .05fr .05fr .05fr .05fr;
-        grid-template-rows: .05fr .05fr .05fr .05fr;
-    text-transform: uppercase;
-    padding-left: 0%;
-    padding-top: 6%;
-  }
-  .text-9 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    padding-right: 5%;
-    font-size: 18vw;
-  }
-  .text-10 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    font-size: 18vw;
-  }
-  .text-11 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-    padding-right: 5%;
-    font-size: 18vw;
-  }
-  .text-12 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-    font-size: 18vw;
-  }
-  .text-13 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-    padding-right: 5%;
-    font-size: 18vw;
-  }
-  .text-14 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-    font-size: 18vw;
-  }
-  .text-15 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-row: 4/5;
-    padding-right: 5%;
-    font-size: 18vw;
-  }
-  .text-16 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-row: 4/5;
-    font-size: 18vw;
+    font-size: 35%;
+    grid-column: span;
   }
   .side {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1/2;
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-row: 4/5;
-    -ms-grid-rows: .05fr .05fr .05fr .05fr .05fr;
-        grid-template-rows: .05fr .05fr .05fr .05fr .05fr;
-    margin-right: 20%;
-  }
-  h3 span {
-    font-size: 200%;
-    display: block;
-  }
-  .text-4 {
-    -ms-grid-row: 5;
-    -ms-grid-row-span: 1;
-    grid-row: 5/6;
-    font-size: 2.5vw;
-    padding: 5%;
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  .text-5 {
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-row: 4/5;
-    padding: 5%;
-    font-size: 2.5vw;
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  .text-6 {
     -ms-grid-row: 3;
     -ms-grid-row-span: 1;
     grid-row: 3/4;
-    padding: 5%;
-    font-size: 2.5vw;
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    margin-left: 3%;
+    text-align: left;
   }
-  .text-7 {
+  h3 span {
+    display: block;
+    font-size: 35%;
+  }
+  .hero {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
     grid-row: 2/3;
-    padding: 5%;
-    font-size: 2.5vw;
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    margin-left: 15%;
+    margin-top: 5%;
   }
-  .text-8 {
-    -ms-grid-row: 1;
+  .image {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 4;
     -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    padding: 5%;
-    font-size: 2.5vw;
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  h2 {
-    font-size: 200%;
+    grid-row: 4/5;
   }
 }
 /*# sourceMappingURL=styles.css.map */
