--- a/lostcity/styles/styles.scss
+++ b/lostcity/styles/styles.scss
@@ -4,16 +4,18 @@
     font-weight: 200;
 }
 
-div {
-    width: 35px;
-    height: 5px;
-    background-color: white;
-    margin: 6px 0;
-}
 
-p {font-size:.5vw;
+
+@media (max-width: 499px) {
+
+
+
+p {font-size:50%;
+    font-weight: 100;
+    text-align: center;
 color:white;
 text-transform: capitalize;}
 
 h1 {color:white;
 text-transform: capitalize;  }
+}
