--- a/lostcity/styles/styles.css
+++ b/lostcity/styles/styles.css
@@ -6,8 +6,18 @@
 }
 
 @media (max-width: 499px) {
+  .logo {
+    max-width: 400%;
+  }
   img {
-    max-width: auto;
+    max-width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20%;
+    margin-top: 10%;
+    -o-object-position: center;
+       object-position: center;
   }
   p {
     font-size: 50%;
@@ -19,6 +29,15 @@
   h1 {
     color: white;
     text-transform: capitalize;
+    list-style-type: none;
+    text-align: center;
+  }
+  h2 {
+    font-size: 75%;
+    color: white;
+    text-transform: capitalize;
+    text-decoration: none;
+    text-align: center;
   }
 }
 /*# sourceMappingURL=styles.css.map */
