--- a/lostcity/styles/styles.scss
+++ b/lostcity/styles/styles.scss
@@ -8,7 +8,16 @@
 
 @media (max-width: 499px) {
 
-img {max-width:auto;}
+.logo {max-width:400%;}
+    
+
+img {max-width:50%;
+display: block;
+margin-left:auto;
+margin-right:auto;
+margin-bottom: 20%;
+margin-top:10%;
+object-position: center;}
 
 p {font-size:50%;
     font-weight: 100;
@@ -17,5 +26,16 @@ color:white;
 text-transform: capitalize;}
 
 h1 {color:white;
-text-transform: capitalize;  }
+text-transform: capitalize;
+list-style-type: none;
+text-align: center;
 }
+
+h2 {font-size:75%;
+    color:white;
+text-transform: capitalize;
+text-decoration: none;
+text-align: center;}
+}
+
+ 
