--- a/lostcity/styles/styles.css
+++ b/lostcity/styles/styles.css
@@ -2,13 +2,10 @@
   background-color: black;
   font-family: sans-serif;
   font-size: 32px;
-  font-weight: 200;
 }
 
 @media (max-width: 499px) {
-  .logo {
-    max-width: 400%;
-  }
+  /*how do i make the logo 50% and the other images smaller? also why are images not centering?*/
   img {
     max-width: 50%;
     display: block;
@@ -28,12 +25,14 @@
   }
   h1 {
     color: white;
+    font-weight: 600;
     text-transform: capitalize;
     list-style-type: none;
     text-align: center;
   }
   h2 {
     font-size: 75%;
+    font-weight: 200;
     color: white;
     text-transform: capitalize;
     text-decoration: none;
