trying to position images using asset div class

--- a/lostcity/src/_includes/_header.html
+++ b/lostcity/src/_includes/_header.html
@@ -1,2 +1,13 @@
-<h1>this is the header partial!!</h1>
+---
+layout: layouts/default.njk
+title: header
+---
+<div class="header-wrapper">
 <img class= "logo" src="images/logo.png" alt="lost city diner">
+
+<button><a href="/">home</a></button>
+<button><a href="/about">about</a></button>
+<button><a href= "/menu_page">menus</a></button>
+<button><a href="/order">order</a></button>
+
+</div>
