--- a/lostcity/src/styles/styles.scss
+++ b/lostcity/src/styles/styles.scss
@@ -3,39 +3,105 @@
     font-size: 32px;
    
 }
-.wrapper
-{display: grid;
-grid-template-columns: 1fr 1fr 1fr;
+
+/*header*/
+
+.header-wrapper {display: grid;
+grid-template-columns: 3fr 1fr 1fr 1fr 1fr;
+margin-right:5%;
+margin-left:5%;
 
 }
 
-/*why is there so much space between the logo and the first set of text*/
+button {
+    color:white;
+ background-color:red;
+border-radius: 25px;
+text-decoration: none;
+border-color:red;
+margin:20%;
+
+}
+
+
+
+a {color:white;
+background-color:red;
+text-decoration: none;
+font-size: 75%;}
+
+.logo {grid-column:1/2;
+    max-width: 100%;
+    padding-top:7%;
+    width:80%;
+    
+}
+
+/*header ends*/
+
+
+.wrapper
+{display: grid;
+grid-template-columns: 1fr 1fr 1fr;
+grid-template-rows: .5fr 1fr ;
+
+}
+
+
+.des {grid-column: 1/2;
+grid-row: 1/2;
+color:white;
+line-height:100%;
+margin-top: 15%;
+}
+
 
 .text
-{grid-column: 1/2;
+{
+grid-column: 1/2;
+grid-row: 2/3;
 margin-left:20%;
 
 }
 
-.logo {grid-column:1/2;
-    max-width: 100%;}
 
 .address {grid-column: 2/4;
 margin-left: 40%;}
 
-.icons {grid-column: 3/4;
-    max-width:20%;
-
+.assets {grid-column:3/4;
+    grid-row:1/3;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 
-img:nth-child(2) {
-    margin-top: 50%;
+.milkshake {grid-column: 1/2;
+    grid-row:1/2;
+    max-width:20%;
+    margin:10%;
+
     
 }
 
+.burger {grid-column: 2/3;
+    grid-row:2/3;
+    max-width:20%;
+    margin:10%;
+    
+}
+
+.fries {grid-column: 3/4;
+    grid-row:3/4;
+    max-width:20%;
+    margin:10%;
+    
+}
+
+
 img {
+    grid-row: auto;
 max-width:20%;
-margin:10%;
+
 }
 
 p {font-size:50%;
@@ -50,10 +116,11 @@ text-transform: capitalize;
 list-style-type: none;
 text-align: left;
 margin-left:10%;
+font-size:85%;
 
 }
 
-h2 {font-size:75%;
+h2 {font-size:70%;
     font-weight: 200;
     color:white;
 text-transform: capitalize;
@@ -61,7 +128,7 @@ text-decoration: none;
 text-align: left;
 margin-left:30%;}
 
-h3 {font-size:60%;
+h3 {font-size:55%;
     font-weight: 200;
     color:white;
 text-transform: capitalize;
