--- a/lostcity/src/_includes/_header.html
+++ b/lostcity/src/_includes/_header.html
@@ -8,6 +8,6 @@ title: header
 <button><a href="/">home</a></button>
 <button><a href="/about">about</a></button>
 <button><a href= "/menu_page">menus</a></button>
-<button><a href="/order">order</a></button>
+<button><a href="/order_form">order</a></button>
 
 </div>
