--- a/lostcity/src/_includes/_header.html
+++ b/lostcity/src/_includes/_header.html
@@ -1,9 +1,9 @@
 ---
 layout: layouts/default.njk
 title: header
-stylesheet: _header
----
+stylesheet: header
 
+---
 <div class="header-wrapper">
 <img class= "logo" src="images/logo.png" alt="lost city diner">
 
