--- a/lostcity/src/_includes/layouts/default.njk
+++ b/lostcity/src/_includes/layouts/default.njk
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/styles/{{ stylesheet }}.css">
+    
     <title>{{ title }}</title>
 
 </head> 
@@ -13,6 +14,9 @@
 
 {{content | safe}}
 
+<script type=“text/javascript” src=“/scripts/{{ javascript }}.js”></script>
+
 </body>
+
 
 </html>
