--- a/lostcity/src/styles/menu_page.scss
+++ b/lostcity/src/styles/menu_page.scss
@@ -1,111 +1,62 @@
-/* CSS Document */
+.wrapper {display:grid; grid-template-columns:1fr 1fr 1fr;
 
-
-.wrapper {grid-template-columns: 1fr 1fr 1fr;
-grid-template-rows: 1fr 1fr 1fr;}
-
-
-
-body {
-	background: black;
-	font-size:22px;
-	line-height: 32px;
-	color: white;
-    font-family: sans-serif;
-    text-align: center;
-	}
-
-
-
-a {
-    color: white;
-    font-weight: 200;
 }
 
-b {color: white;
-font-weight:200;}
-
-
-
-
-
-/*get rid of dots*/
-
-nav ul {
-	padding: 0;
-  margin: 0;
-	list-style: none;
-	
-    }
-    
-
-/*buttons*/	
-
-nav ul li {
-    background-color:red;
-    margin: 10%;
-    border-radius: 25px;
-}
-	
-/*button text*/
-nav a {
-	display:block;
-	padding:0 10px;	
-	color: white;
-	font-size:20px;
-	line-height: 60px;
-	text-decoration:none;
+.navbar {grid-column: 2/3;
+text-align: center;
 }
 
-/*what happens to the button when you hover*/
-nav a:hover { 
-    background-color: green; 
-    margin-bottom: 200%;
-}
-
-nav b:hover { background-color: red; 
+.dropbtn {
+        
+        color: white;
+        background-color: red;
+        font-size: 16px;
+        border: none;
+        border-radius: 25px;
+        margin:5%;
     }
 
-/* hide menu */
-nav ul ul {
-	display: none;
-	position: absolute; 
-	top: 10%; 
-}
-	
-/* display menu on Hover */
-nav ul li:hover > ul {
-    display:block;
-    margin-top:50%;
+.starters {color:pink;text-align: center;}
+
+.burgers {color:purple;text-align: center;}
+
+.fountain {color:yellow;text-align: center;}
+.brunch {color:orange;text-align: center;}
+
+    .dropbtn:hover, .dropbtn:focus {
+        background-color: #2980B9;
+    }
+
+    .dropdown {
+        
+        display: inline-block;
+
+    }
+
+    .dropdown-content {
+display: none;
     
     
-}
-
-
-	
-/* what comes up when you hover and for some reason button size*/
-
-nav ul li {width:100px;
-	display:block;
-    position: relative;
     
-}
-
-nav ul ul li {
-	width:100px;
-	display:block;
-    position: relative;
+    z-index: 1;
+    color:black;
     
-}
+        
+       
+    }
 
-nav ul ul ul li {
-	width:100px;
-	display:block;
-    position: relative;
-    
-}
+    .dropdown-content a {
+        color:black;
+        display: block;
+        z-index: 1;
+        
+    }
 
+    .dropdown a:hover { display:block;
+        color:black;
+    margin-top:50%;}
 
+    .show {display: block;color:black;}
 
 
 	
